# i18n-wrap-rust

./: .gitignore  Cargo.toml  test.ts  test.vue
crates/wrap/: Cargo.toml
crates/wrap/src/: main.rs  wrap.rs
crates/wrap_core/: Cargo.toml
crates/wrap_core/src/: lib.rs  path.rs  sfc.rs  utils.rs
crates/wrap_napi/: Cargo.toml  index.d.ts  index.js  package.json  pnpm-lock.yaml
crates/wrap_napi/.github/workflows/: CI.yml
crates/wrap_napi/npm/android-arm-eabi/: README.md  package.json
crates/wrap_napi/npm/android-arm64/: README.md  package.json
crates/wrap_napi/npm/darwin-arm64/: README.md  package.json
crates/wrap_napi/npm/darwin-universal/: README.md  package.json
crates/wrap_napi/npm/darwin-x64/: README.md  package.json
crates/wrap_napi/npm/freebsd-x64/: README.md  package.json
crates/wrap_napi/npm/linux-arm-gnueabihf/: README.md  package.json
crates/wrap_napi/npm/linux-arm-musleabihf/: README.md  package.json
crates/wrap_napi/npm/linux-arm64-gnu/: README.md  package.json
crates/wrap_napi/npm/linux-arm64-musl/: README.md  package.json
crates/wrap_napi/npm/linux-riscv64-gnu/: README.md  package.json
crates/wrap_napi/npm/linux-x64-gnu/: README.md  package.json
crates/wrap_napi/npm/linux-x64-musl/: README.md  package.json
crates/wrap_napi/npm/win32-arm64-msvc/: README.md  package.json
crates/wrap_napi/npm/win32-ia32-msvc/: README.md  package.json
crates/wrap_napi/npm/win32-x64-msvc/: README.md  package.json
crates/wrap_napi/src/: lib.rs
crates/wrap_script/: Cargo.toml
crates/wrap_script/src/: lib.rs  script.rs
crates/wrap_script/src/transformer/: mod.rs  module_imports.rs
crates/wrap_script/src/visitor/: mod.rs
crates/wrap_vue/: Cargo.toml
crates/wrap_vue/src/: lib.rs  sfc.rs
crates/wrap_vue/src/comment/: mod.rs
crates/wrap_vue/src/custom_block/: mod.rs
crates/wrap_vue/src/document_type/: mod.rs
crates/wrap_vue/src/fixture/: InterpolationVariable.vue  ModalUpdateAssetGroup.vue  comment.vue  test.vue
crates/wrap_vue/src/script/: mod.rs
crates/wrap_vue/src/style/: mod.rs
crates/wrap_vue/src/template/: mod.rs
crates/wrap_vue/src/template/visitor/: delimiters.rs  mod.rs
crates/wrap_vue/src/text/: mod.rs
test_projects/: regex.ts
test_projects/event/: .env.development  index.html  package.json
test_projects/event/public/: settings.js
test_projects/event/src/: index.ts
test_projects/event/src/controller/: useUser.ts
test_projects/event/src/model/: policy.ts  store.ts  threat.ts  user.ts
test_projects/event/src/utils/: getPagin.ts  tag.tsx
test_projects/event/src/views/: SelectAssetField.vue  index.vue
test_projects/event/src/views/audit/It/: index.vue
test_projects/event/src/views/audit/components/: EventsTableRowModal.vue  industrial.data.ts
test_projects/event/src/views/audit/hooks/: useEventTypeOpts.ts
test_projects/event/src/views/policy/Safety/: index.vue
test_projects/event/test/: app.vue  main.ts
test_projects/event/test/entry/interface/: index.ts
test_projects/event/test/pages/: AssociatePage.vue  EventsPage.vue  ItPage.vue  LoginPage.vue  SystemPage.vue
test_projects/event/test/shared/components/: index.ts
test_projects/event/test/shared/utils/: index.ts
(+6 files in other folders)
