[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
oxc_parser = "0.25.0"
oxc_semantic = "0.25.0"
oxc_span = "0.25.0"
oxc_syntax = "0.25.0"
oxc_ast = "0.25.0"
oxc_allocator = "0.25.0"
oxc_diagnostics = "0.25.0"
oxc_transformer = "0.25.0"
oxc_codegen = "0.25.0"
oxc_minifier = "0.25.0"
oxc_traverse = "0.25.0"

swc_html_ast = { version = "0.37.0", features = ["serde-impl"] }
swc_html_parser = { version = "0.43.0" }
swc_html_visit = { version = "0.37.1" }
swc_html_codegen = { version = "0.46.0" }
swc_common = { version = "0.37.0" }
swc_core = { version = "0.100.2", features = ["common"] }
swc_atoms = "0.6.7"

serde = "1.0.197"
serde_json = "1.0.115"
glob = "0.3.1"
indexmap = "2.2.6"
path-calculate = "0.1.3"
regex = "1.10.6"
