[package]
name = "wrap_core"
description = "The core structures and utilities of wrap"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["vue3", "SFC", "compiler"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flagset = "0.4.3"
fxhash = "0.2.1"
phf = { version = "0.11", features = ["macros"] }
smallvec = "1.10.0"
strum = "0.26.3"
strum_macros = "0.26.4"
swc_core = { version = "0.90.*", features = ["common", "ecma_ast"] }

path-calculate = { workspace = true }
