[package]
name = "wrap_script"
version = "0.1.0"
edition = "2021"

[dependencies]
oxc_ast = { workspace = true }
oxc_span = { workspace = true }
oxc_codegen = { workspace = true }
oxc_parser = { workspace = true }
oxc_allocator = { workspace = true }
oxc_transformer = { workspace = true }
oxc_traverse = { workspace = true }
oxc_semantic = { workspace = true }
oxc_syntax = { workspace = true }

indexmap = { workspace = true }
wrap_core = { path="../wrap_core" }
